@@ -14,4 +14,4 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/KKPMW/matrixTests
 BugReports: https://github.com/KKPMW/matrixTests/issues
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
