@@ -126,7 +126,7 @@ Results should be the same as running \code{wilcox.test(x, y, paired=TRUE)}
 on every row (or column) of \code{x} and \code{y}.
 
 By default if ‘exact’ argument is set to 'NA', exact p-values are computed
-only if both 'x' and 'y' contain less than 50 finite values and there are no
+only if both 'x' and 'y' contain less than 50 values and there are no
 ties. Single sample and paired tests have additional requirement of not
 having zeroe values (values equal to null hypothesis location argument 'mu').
 Otherwise, a normal approximation is used. Be wary of using 'exact=TRUE' on
